--- a/app.css
+++ b/app.css
@@ -6,6 +6,18 @@
 body{
     box-sizing: border-box;
     overflow-x: hidden;
+    font-family: 'Montserrat', sans-serif;
+}
+#banner{
+    background-color:rgba(126, 199, 17, 0.76);
+    height:40px;
+    width:100vw;
+}
+.navbar{
+    background-color: var(--text1);
+}
+.logo{
+    width:55px;
 }
 .text1{
     color:var(--text1);
@@ -29,6 +41,9 @@ body{
     color:var(--text1);
     font-size:5rem;
 }
+#top-banner{
+    background-color: var(--color2);
+}
 @media (max-width:1000px){
     .banner-text h2{
         font-size:3rem;
@@ -51,32 +66,43 @@ body{
 }
 .card{
     border:none;
+    max-width: 70vw;
 }
 #img-srvs{
     width:100vw;;
     min-height:160px;
     object-fit: cover;
 }
-/*
 #services{
-    margin-top:-58px;
+    background-color: var(--color2);
+    padding-bottom:15px;
+    padding-top:15px;
 }
-*/
 
 .stylize1{
     display:inline-block;
-    color:white;
-    border-radius: 50px;
-    border: 1px solid rgb(255, 255, 255);
-    background-color: rgba(255, 0, 0, 0.5);
-    width:350px;
-    padding: 5px 0px;
+    font-size:3rem;
+    padding: 0px 0px;
     z-index: 100;
     text-align: center;
+    margin:0;
+    
 }
 .img-crop1{
     object-fit: cover;
 }
 li{
-    font-size:1.5rem;
+    font-size:1.1rem;
+    font-weight: lighter;
+}
+
+footer{
+    padding-left:30px;
+    padding-top:30px;
+    margin-top:100px;
+    height:200px;
+    background-color: rgba(128, 128, 128, 0.486);
+}
+footer p{
+    margin:0px;
 }
