--- a/app.css
+++ b/app.css
@@ -80,7 +80,7 @@ body{
     padding-top:15px;
 }
 #services h3{
-    color:rgb(223, 234, 236);
+    color:rgb(20, 58, 65);
 }
 
 .stylize1{
@@ -105,12 +105,17 @@ li{
 .srvcs-list h2{
     font-size: 1.5rem;
 }
+#insurance{
+    background-color: var(--color2);
+    padding-bottom:15px;
+    padding-top:15px;
+}
 
 footer{
     padding-left:30px;
     padding-top:30px;
-    margin-top:100px;
-    height:200px;
+    /*margin-top:100px;*/
+    min-height:200px;
     background-color: rgba(128, 128, 128, 0.486);
 }
 footer p{
